--- a/bartender-webapp/src/index.html
+++ b/bartender-webapp/src/index.html
@@ -7,11 +7,14 @@
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <script src="https://unpkg.com/flowbite@1.6.0/dist/flowbite.min.js"></script>
 </head>
 
 <body>
   <app-root></app-root>
   <script src="https://unpkg.com/flowbite@1.5.1/dist/flowbite.js"></script>
+  <script src="https://unpkg.com/flowbite@1.6.0/dist/flowbite.min.js"></script>
+
 </body>
 
 </html>
